# skills

./: .gitignore  2026-02-15 - youtube - The Highest Point of Leverage in Claude Code (JTW_sEXLH_o).md  2026-02-15 - youtube - The Highest Point of Leverage in Claude Code - comments (JTW_sEXLH_o).md  2026-02-15 - youtube - The Highest Point of Leverage in Claude Code - transcript (JTW_sEXLH_o).md  CLAUDE.md  README.md  conftest.py  vba-assistant.skill
.claude/: settings.json  settings.local.json
.codex/: config.toml
claude-code-only/mdedit/: Cargo.toml
claude-code-only/mdedit/src/: addressing.rs  content.rs  counting.rs  document.rs  error.rs  main.rs  output.rs  parser.rs  whitespace.rs
claude-code-only/mdedit/src/commands/: append.rs  delete.rs  extract.rs  frontmatter.rs  insert.rs  mod.rs  outline.rs  prepend.rs  rename.rs  replace.rs  search.rs  stats.rs  validate.rs
claude-code-only/mdedit/tests/: append.rs  delete_cmd.rs  extract.rs  frontmatter.rs  insert.rs  outline.rs  prepend.rs  rename.rs  replace.rs  search.rs  stats.rs  validate.rs  workflow.rs
claude-code-only/mdedit/tests/common/: mod.rs
claude-code-only/mdedit/tests/fixtures/: code_fences.md  duplicate_headings.md  empty_sections.md  nested.md  no_headings.md  simple.md  with_frontmatter.md  with_preamble.md
claude-web-only/: business-analyst.skill
launcher/: README.md  config.py  launcher.py  prompt_builder.py
readwren-profiles/: readwren_profile_2025-12-10.json  readwren_profile_2025-12-10.md  readwren_state.json
templates/: SKILL-template.md
work-in-progress/: pollinations_poc.py
(+294 files in other folders)
