[package]
name = "mdedit"
version = "0.1.0"
edition = "2021"
description = "Structured markdown editing for LLM workflows"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.26"
tree-sitter-md = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
strsim = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
